Mon Nov 29 20:25:01 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc, htdig/Retriever.h, htdig/Server.cc(push),
	htdig/Server.h: added Alexis's patch for persistent local digging
	even if HTTP server is down. Also made new GetLocal() method
	call GetLocalUser() itself, to simplify its use, and made it
	non-private, for eventual use by Server code.

Mon Nov 29 19:18:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_href & got_redirect): corrections to case
	insensitive server fix, to handle redirects, to make more thorough
	use of mapped URL, and to update it after normalization.

Fri Nov 26 17:14:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveHTTP): always c.close() the connection
	when returning.
	* htdig/HTML.cc(HTML & do_tag): add code to turn off indexing between
	<style> and </style> tags.

Fri Nov 26 16:31:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc(Read): fixed to allow final line without
	terminating newline character, rather than ignoring it.
	* htlib/String.cc(write): added Alexis Mikhailov's fix to bump up
	pointer after writing a block.
	* htsearch/Display.cc(setVariables): added Alexis Mikhailov's fix
	to check the number of pages against maximum_pages at the right time.
	(Put it even earlier, to make sure nPages is at least 1.)
	* htsearch/Display.cc(generateStars): Remove extra newline after
	STARSRIGHT and STARSLEFT variables, noted by Torsten Neuer
	<tneuer@inwise.de>.

Wed Nov 24 20:33:13 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/htdig.conf: Add bad_extensions to make it
	more obvious to users how to exclude certain document types.
	Fix the comments for search_algorithm to refer to all the current
	possibilities.	Add example of no_excerpt_show_top attribute in
	line with most user's expectations.  (Geoff's changes)
